# NewsFinance

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/agents/: __init__.py  calibration.py  confounder.py  entity_linker.py  event_classifier.py  expectation.py  exposure.py  market_reaction.py  outcome_tracker.py  schemas.py  scoring.py
backend/app/api/: alerts.py  clusters.py  coverage.py  events.py  health.py
backend/app/core/: config.py  db.py  llm.py  logging.py  redis_client.py
backend/app/data/: sectors.py  supply_chain.py  universe.py
backend/app/ingestion/: __init__.py  base.py  dedup.py  finnhub.py  fred.py  polygon_news.py  polygon_prices.py  rss.py  sec_edgar.py
backend/app/models/: __init__.py  alerts.py  entities.py  events.py  market.py
backend/app/scripts/: backfill_prices.py  classify_clusters.py  cleanup_structured_clusters.py  compute_expectations.py  compute_exposures.py  compute_reactions.py  pipeline_smoke_test.py  run_dedup.py  run_ingester.py  seed_entity_graph.py
backend/app/worker/: __init__.py  scheduler.py
backend/tests/: test_expectation_math.py  test_health.py
docs/: RUNBOOK.md  SETUP.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: nav.tsx  (+2 more)
infra/: nixpacks.toml  railway.json
(+7 files in other folders)
