[project]
name = "newsfinance-backend"
version = "0.1.0"
description = "NewsFinance market-impact intelligence backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "apscheduler>=3.10.4",
    "anthropic>=0.39.0",
    "voyageai>=0.3.2",
    "httpx>=0.27.2",
    "feedparser>=6.0.11",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
